kubernetes/cog-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: esgf-cog
  labels:
    stack: esgf
    app: cog
spec:
  containers:
  - name: esgf-cog
    image: esgfhub/esgf-cog:devel
    ports:
    - containerPort: 8000
    # flags: ESGF_HOSTNAME = localhost,  ESGF = true to use postgres, run django server = true
    args: ["localhost", "true", "true"]
    volumeMounts:
    - name: cog-data
      mountPath: /usr/local/cog/cog_config
    - name: esgf-config-archive
      mountPath: /root/archives/esgf_config.tar.xz
    - name: grid-certificates
      mountPath: /root/archives/grid_security_certs.tar.xz
  volumes:
  - name: cog-data
    emptyDir: {}
  - name: esgf-config-archive
    hostPath:
      path: /Users/cinquini/ESGF_CONFIG/archives/esgf_config.tar.xz
  - name: grid-certificates
    hostPath:
      path: /Users/cinquini/ESGF_CONFIG/archives/grid_security_certs.tar.xz
