kubernetes/idp-node-pod.yaml
# note: the esg-idp-node container must connect to the esgf-postgres container at esgf-postgres:5432
# (as specified in the file /esg/config/esgf.properties)
apiVersion: v1
kind: Pod
metadata:
  name: esgf-idp-node
  labels:
    stack: esgf
    app: idp-node
spec:
  containers:
  - name: esgf-idp-node
    image: esgfhub/esgf-idp-node:devel
    ports:
    - containerPort: 8080
    - containerPort: 8443
    volumeMounts:
    - name: esgf-config-archive
      mountPath: /root/archives/esgf_config.tar.xz
    - name: esgf-truststore
      mountPath: /usr/java/latest/jre/lib/security/jssecacerts
  volumes:
  - name: esgf-config-archive
    hostPath:
      path: /Users/cinquini/ESGF_CONFIG/archives/esgf_config.tar.xz
  - name: esgf-truststore
    hostPath:
      path: /Users/cinquini/ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts
