kubernetes/httpd-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgf-httpd
  labels:
    stack: esgf
    app: httpd
spec:
  type: NodePort
  ports:
  - port: 80 # host port
    targetPort: 80 # container port
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    stack: esgf
    app: httpd
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: esgf-httpd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        stack: esgf
        app: httpd
    spec:
      containers:
      - name: esgf-httpd
        image: esgfhub/esgf-httpd:devel
        command: ["/usr/local/bin/docker-entrypoint.sh"]
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: httpd-esgf-httpd-conf
          mountPath: /etc/httpd/conf.d/esgf-httpd.conf
        - name: httpd-cachain-pem
          mountPath: /etc/certs/cachain.pem
        - name: httpd-esgf-ca-bundle-crt
          mountPath: /etc/certs/esgf-ca-bundle.crt
        - name: httpd-hostcert-pem
          mountPath: /etc/certs/hostcert.pem
        - name: httpd-hostcert-pkcs12
          mountPath: /etc/certs/hostcert.pkcs12
        - name: httpd-hostkey-pem
          mountPath: /etc/certs/hostkey.pem
        - name: grid-certificates
          mountPath: /root/archives/grid_security_certs.tar.xz
        - name: esgf-config-files
          mountPath: /root/archives/esgf_config.tar.xz
      volumes:
      - name: httpd-esgf-httpd-conf
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/httpd/conf/esgf-httpd.conf
      - name: httpd-cachain-pem
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/httpd/certs/cachain.pem
      - name: httpd-esgf-ca-bundle-crt
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/httpd/certs/esgf-ca-bundle.crt
      - name: httpd-hostcert-pem
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/httpd/certs/hostcert.pem
      - name: httpd-hostcert-pkcs12
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/httpd/certs/hostcert.pkcs12
      - name: httpd-hostkey-pem
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/httpd/certs/hostkey.pem
      - name: grid-certificates
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/archives/grid_security_certs.tar.xz
      - name: esgf-config-files
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/archives/esgf_config.tar.xz
