kubernetes/idp-node-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgf-idp-node
  labels:
    stack: esgf
    app: idp-node
spec:
  type: NodePort
  ports:
  - port: 8080 # host port
    targetPort: 8080 # container port
    protocol: TCP
    name: tomcat-http
  - port: 8443
    targetPort: 8443
    protocol: TCP
    name: tomcat-https
  # the selector identifies the set of pods to load-balance against
  selector:
    stack: esgf
    app: idp-node
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: esgf-idp-node
spec:
  replicas: 1
  template:
    metadata:
      labels:
        stack: esgf
        app: idp-node
    spec:
      containers:
      - name: esgf-idp-node
        image: esgfhub/esgf-idp-node:devel
        ports:
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
        - name: esgf-config-archive
          mountPath: /root/archives/esgf_config.tar.xz
        - name: esgf-truststore
          mountPath: /usr/java/latest/jre/lib/security/jssecacerts
      volumes:
      - name: esgf-config-archive
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/archives/esgf_config.tar.xz
      - name: esgf-truststore
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts
