kubernetes/solr-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgf-solr
  labels:
    stack: esgf
    app: solr
spec:
  type: NodePort
  ports:
  - port: 8983 
    targetPort: 8983 
    protocol: TCP
    name: solr-slave
  - port: 8984
    targetPort: 8984
    protocol: TCP
    name: solr-master
  # the selector identifies the set of pods to load-balance against
  selector:
    stack: esgf
    app: solr
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: esgf-solr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        stack: esgf
        app: solr
    spec:
      containers:
      - name: esgf-solr
        image: esgfhub/esgf-solr:devel
        ports:
        - containerPort: 8983
        - containerPort: 8984
        volumeMounts:
        - name: solr-index
          mountPath: /esg/solr-index
      volumes:
      - name: solr-index
        persistentVolumeClaim:
          claimName: solr-index-pvc
