kubernetes/tds-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgf-tds
  labels:
    stack: esgf
    app: tds
spec:
  type: NodePort
  ports:
  - port: 8080 # host port
    targetPort: 8080 # container port
    protocol: TCP
    name: tomcat-http
  - port: 8443
    targetPort: 8443
    protocol: TCP
    name: tomcat-https
  - port: 8009
    targetPort: 8009
    protocol: TCP
    name: tomcat-ajp
  # the selector identifies the set of pods to load-balance against
  selector:
    stack: esgf
    app: tds
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: esgf-tds
spec:
  replicas: 1
  template:
    metadata:
      labels:
        stack: esgf
        app: tds
    spec:
      containers:
      - name: esgf-tds
        image: esgfhub/esgf-tds:devel
        ports:
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
        - name: tds-data
          mountPath: /esg/content/thredds
        - name: esg-data
          mountPath: /esg/data
        #- name: esgf-config-archive
        # if using hostPath volume: mount volume to complete file path 
        #  mountPath: /root/archives/esgf_config.tar.xz
        # if using configMap volume: mount volume to directory path
        #  mountPath: /root/archives
        - name: esgf-config-files
          mountPath: /esg/config
        - name: tds-web-xml
          mountPath: /usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
        - name: tomcat-esg-truststore
          mountPath: /usr/java/latest/jre/lib/security/jssecacerts
        #readinessProbe:
        #  httpGet:
        #    path: /thredds
        #    port: 8080
        #  initialDelaySeconds: 5
        #  periodSeconds: 10
      # publisher container must be co-located with tds container
      # to be able to write thredds catalogs to /esg/content/tredds
      - name: esgf-publisher
        image: esgfhub/esgf-publisher:devel
        volumeMounts:
        - name: tds-data
          mountPath: /esg/content/thredds
        - name: esg-data
          mountPath: /esg/data
        #- name: esgf-config-archive
        #  mountPath: /root/archives
        - name: esgf-config-files
          mountPath: /esg/config
      volumes:
      #- name: tds-data
      #  emptyDir: {}
      #- name: esg-data
      #  emptyDir: {}
      #- name: esgf-config-archive
        #hostPath:
        #  path: /Users/cinquini/ESGF_CONFIG/archives/esgf_config.tar.xz
      - name: esgf-config-files
        configMap:
          name: esgf-config-files
      - name: tds-web-xml
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/webapps/thredds/WEB-INF/web.xml
      - name: tomcat-esg-truststore
        hostPath:
          path: /Users/cinquini/ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts
      - name: tds-data
        persistentVolumeClaim:
          claimName: tds-data-pvc
      - name: esg-data
        persistentVolumeClaim:
          claimName: esg-data-pvc
